--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --principal: #FF0B55;
   --font-raleway: 'Raleway', sans-serif;
 
 }
@@ -10,6 +11,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-principal: var(--principal);
 }
 
 @media (prefers-color-scheme: dark) {
